code refactoring with generics